[package]
name = "hippomenes-core"
version = "0.1.0"
edition = "2021"

[lib]
test = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.32"
critical-section = {version="1.1.2"}
hippomenes-derive = {path = "./hippomenes-derive/"}
